--- a/web/templates/myadmin/goods/add.html
+++ b/web/templates/myadmin/goods/add.html
@@ -83,14 +83,32 @@
                           <div class="am-u-sm-9">
                               <div class="am-form-group am-form-file">
                                   <div class="tpl-form-file-img">
-                                      <img src="assets/img/a5.png" alt="">
+                                      <img id="showImg" style="width: 200px;" src="assets/img/a5.png" alt="">
                                   </div>
                                   <button type="button" class="am-btn am-btn-danger am-btn-sm">
                                     <i class="am-icon-cloud-upload"></i> 添加封面图片</button>
-                                  <input name="pic" type="file" multiple="">
+                                  <input id="ReadFile" name="pic" type="file" multiple="">
                               </div>
                           </div>
                         </div>
+                        <script type="text/javascript">
+                            $('#ReadFile').change(function(){
+                                var file = this.files[0];
+
+                                //限定上传文件的类型，判断是否是图片类型
+                                if (!/image\/\w+/.test(file.type)) {
+                                    alert("只能选择图片");
+                                    return false;
+                                }
+                                var reader = new FileReader();
+                                reader.readAsDataURL(file);
+                                reader.onload = function(e) {
+                                    base64Code = this.result;
+                                    //把得到的base64赋值到img标签显示
+                                    $("#showImg").attr("src", base64Code);
+                                }
+                            })
+                        </script>
 
                   
                         <link rel="stylesheet" type="text/css" href="/ueditor/UE/third-party/SyntaxHighlighter/shCoreDefault.css">
