--- a/web/templates/myhome/index.html
+++ b/web/templates/myhome/index.html
@@ -77,9 +77,9 @@
                 </div>
             </li>
             <li class="layout-header-service-item layout-header-service-cart" id="layoutHeaderCart">
-                <a class="layout-header-service-link" href="#" data-mtype="wmz_public_yt_cart">
+                <a class="layout-header-service-link" href="{% url 'myhome_cart_index' %}" data-mtype="wmz_public_yt_cart">
                     <i class="glyphicon glyphicon-shopping-cart"></i>
-                    <span class="layout-header-service-cart-num">0</span>
+                    <span class="layout-header-service-cart-num"></span>
                 </a>
             </li>
           </ul>
